added footer links

--- a/css/layout.css
+++ b/css/layout.css
@@ -601,6 +601,7 @@
 	.profile {
 		background-color: #f7f7f7;
 		padding-bottom: 20px;
+        padding-top: 20px; /*Remove after adding pictures */
 		border-bottom: 1px solid #f84545;
 	}
 	
