--- a/css/layout.css
+++ b/css/layout.css
@@ -378,9 +378,16 @@
    Parallax
 ======================================================== */			
 				
-	#parallax1, #parallax2, #parallax4 {
+	#parallax2, #parallax4 {
 		width: 100%;
 		height: 500px;
+		background-color: #333;
+		position: relative;
+		overflow: hidden;
+	}
+
+    #parallax1 {
+		width: 100%;
 		background-color: #333;
 		position: relative;
 		overflow: hidden;
@@ -410,7 +417,7 @@
 	.parallax-title {
 		z-index: 200;
 		position: relative;
-		font-size: 36px;
+		font-size: 23px;
 		font-family: 'Montserrat', 'Trebuchet MS', sans-serif;
 		text-align: center;
 		text-transform: uppercase;
