--- a/css/layout.css
+++ b/css/layout.css
@@ -405,7 +405,7 @@
 	/*Parallax1------------------------------------------*/
 	
 	.bg1 {
-		background: #333 url(../img/parallax/bg10.jpg) 50% 50% repeat-y fixed;
+		background: #333 url(../img/parallax/bg10.jpg) 50% 50% no-repeat fixed;
 		width: 100%;
 		height: 100%;
 		margin: 0 auto;
@@ -417,7 +417,7 @@
 	.parallax-title {
 		z-index: 200;
 		position: relative;
-		font-size: 23px;
+		font-size: 2em;
 		font-family: 'Montserrat', 'Trebuchet MS', sans-serif;
 		text-align: center;
 		text-transform: uppercase;
