--- a/css/layout.css
+++ b/css/layout.css
@@ -405,7 +405,7 @@
 	/*Parallax1------------------------------------------*/
 	
 	.bg1 {
-		background: #333 url(../img/parallax/bg10.jpg) 50% 50% no-repeat fixed;
+		background: url(../img/parallax/bg10.jpg) 50% 50% no-repeat fixed;
 		width: 100%;
 		height: 100%;
 		margin: 0 auto;
