some further SEO improvements

--- a/css/layout.css
+++ b/css/layout.css
@@ -879,7 +879,7 @@
 	
 	.contact-name {
 		color: #777;
-		font-size: 18px;
+		font-size: 1.2em;
 		text-transform: uppercase;
 		letter-spacing: 1px;
 		font-family: 'Montserrat', 'Trebuchet MS', sans-serif;
